# POO-23-24

./: Aparelho.cpp  Aparelho.h  Aparelhos.cpp  Aparelhos.h  Aquecedor.cpp  Aspersor.cpp  CMakeLists.txt  EOperador.h  Equipamento.cpp  Equipamento.h  GestorHabitacao.cpp  GestorHabitacao.h  Habitacao.cpp  Habitacao.h  Interface.cpp  Interface.h  Lampada.h  Processador.cpp  Processador.h  Propriedades.cpp  Propriedades.h  README.md  Refrigerador.cpp  Refrigerador.h  Regra.cpp  Regra.h  Sensor.cpp  Sensor.h  SensorFumo.cpp  SensorFumo.h  SensorHumidade.cpp  SensorHumidade.h  SensorLuminosidade.cpp  SensorLuminosidade.h  SensorMovimento.cpp  SensorMovimento.h  SensorRadiacao.cpp  SensorRadiacao.h  SensorSom.cpp  SensorSom.h  (+7 more)
Aparelhos/: Aparelho.cpp  Aparelho.h  Aquecedor.cpp  Aquecedor.h  Aspersor.cpp  Aspersor.h  Lampada.cpp  Lampada.h  Refrigerador.cpp  Refrigerador.h
Processadores/: Processador.cpp  Processador.h
Propriedades/: Fumo.cpp  Fumo.h  Humidade.cpp  Humidade.h  Luz.cpp  Luz.h  Propriedade.cpp  Propriedade.h  Radicacao.cpp  Radicacao.h  Som.cpp  Som.h  Temperatura.cpp  Temperatura.h  VibracaoMovimento.cpp  VibracaoMovimento.h
Regras/: Regra.cpp  Regra.h  RegraENTRE.cpp  RegraENTRE.h  RegraFORA.cpp  RegraFORA.h  RegraIGUAL_A.cpp  RegraIGUAL_A.h  RegraMAIOR_QUE.cpp  RegraMAIOR_QUE.h  RegraMENOR_QUE.cpp  RegraMENOR_QUE.h
Sensores/: Sensor.cpp  Sensor.h  SensorFumo.cpp  SensorFumo.h  SensorHumidade.cpp  SensorHumidade.h  SensorLuminosidade.cpp  SensorLuminosidade.h  SensorMovimento.cpp  SensorMovimento.h  SensorRadiacao.cpp  SensorRadiacao.h  SensorSom.cpp  SensorSom.h  SensorTemperatura.cpp  SensorTemperatura.h
