cmake_minimum_required(VERSION 3.23)
project(POO_23_24)

set(CMAKE_CXX_STANDARD 14)

add_executable(POO_23_24 main.cpp Interface.cpp Interface.h Habitacao.cpp Habitacao.h Zona.cpp Zona.h Propriedades.cpp Propriedades.h Aparelho.cpp Aparelho.h Aquecedor.cpp Aquecedor.h Aspersor.cpp Aspersor.h Refrigerador.cpp Refrigerador.h Lampada.cpp Lampada.h Equipamento.cpp Equipamento.h Sensor.cpp Sensor.h
        SensorTemperatura.h
        SensorTemperatura.h
        SensorTemperatura.cpp
        SensorLuminosidade.h
        SensorLuminosidade.cpp
        SensorMovimento.h
        SensorMovimento.cpp
        SensorRadiacao.cpp
        SensorRadiacao.h
        SensorHumidade.h
        SensorHumidade.cpp
        SensorFumo.h
        SensorFumo.cpp
        SensorSom.h
        SensorSom.cpp)
